welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.error
monkeyTrouble:2: error: reassignment to val
	if(aSmile=bSmile){
                 ^monkeyTrouble:2: error: type mismatch;
 found   : Unit
 required: Boolean
	if(aSmile=bSmile){
        ^